--- a/D5-Min-Perimeter-with-GeoPandas-and-Contiguity.ipynb
+++ b/D5-Min-Perimeter-with-GeoPandas-and-Contiguity.ipynb
@@ -815,14 +815,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The weighted is 14.234626457963815\n",
+      "The total perimeter length (excluding the exterior boundary of state) is 14.234626457963815\n",
       "District 0 has population 752140 and contains counties ['Payne', 'Caddo', 'Greer', 'Tillman', 'Harper', 'Grant', 'Dewey', 'Texas', 'Roger Mills', 'Kiowa', 'Beckham', 'Noble', 'Harmon', 'Major', 'Alfalfa', 'Beaver', 'Jackson', 'Cimarron', 'Ellis', 'Grady', 'Blaine', 'Woodward', 'Kingfisher', 'Comanche', 'Cotton', 'Custer', 'Garfield', 'Washita', 'Logan', 'Canadian', 'Woods']\n",
       "District 1 has population 752906 and contains counties ['Oklahoma', 'Lincoln']\n",
       "District 2 has population 750209 and contains counties ['Delaware', 'McIntosh', 'Le Flore', 'Nowata', 'Adair', 'Craig', 'Mayes', 'Muskogee', 'Ottawa', 'Pittsburg', 'Latimer', 'Creek', 'Sequoyah', 'Haskell', 'Cherokee', 'Wagoner', 'Okmulgee', 'Pawnee', 'Rogers']\n",
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
